# upstand

./: CHANGELOG.md  Cargo.toml  Data export & about brief.md  LICENSE  README.md  SHA256SUMS.txt  build.rs  dashboard plan.md  default.json  tauri.conf.json
docs/: index.html  privacy.html
landing/: index.html  privacy.html  privacy.md
src/: main.rs
